[Refactor] Remove json-path from deps and use JsonPointer instead (#3262)
### Description
After RFC 6901 was introduced
and the implementation was added to Jackson,
there is no need to keep the `com.jayway.jsonpath:json-path` library in
our source code,
so we can replace current validation with Jackson's `JsonPointer` class.

Besides added missing tests for:
 - `RoleRequestContentValidator`
 - `AuditRequestContentValidator`

### Issues Resolved
https://github.com/opensearch-project/security/issues/3245

### Check List
- [ ] New functionality includes testing
- [ ] New functionality has been documented
- [ ] Commits are signed per the DCO using --signoff

By submitting this pull request, I confirm that my contribution is made
under the terms of the Apache 2.0 license.
For more information on following Developer Certificate of Origin and
signing off your commits, please check
[here](https://github.com/opensearch-project/OpenSearch/blob/main/CONTRIBUTING.md#developer-certificate-of-origin).

Signed-off-by: Andrey Pleskach <ples@aiven.io>